[gd_scene load_steps=13 format=3 uid="uid://dn2le3mwahtax"]

[ext_resource type="Texture2D" uid="uid://7ugarm1hxci4" path="res://Sprites/WashGame/Game.png" id="1_0nlrr"]
[ext_resource type="Script" uid="uid://blqx70sywhngi" path="res://Scripts/hair_spawner.gd" id="1_hivxq"]
[ext_resource type="Script" path="res://Scenes/HairGroom.gd" id="1_ove2h"]
[ext_resource type="Texture2D" uid="uid://pief7y7ppxla" path="res://Sprites/WashGame/headF.png" id="2_0nlrr"]
[ext_resource type="Script" uid="uid://cbb0f3rgtib20" path="res://Scripts/shaver.gd" id="3_i71ie"]
[ext_resource type="Texture2D" uid="uid://dy1p8s5ej0mti" path="res://Sprites/WashGame/chair.png" id="3_ove2h"]
[ext_resource type="PackedScene" uid="uid://dr7seaticcntf" path="res://Prefabs/Hair.tscn" id="4_3xqlg"]
[ext_resource type="Texture2D" uid="uid://c2tdn2yv62tj8" path="res://Sprites/WashGame/timer.png" id="4_cnocn"]
[ext_resource type="Texture2D" uid="uid://7ixxwlmtejei" path="res://Sprites/WashGame/shaver.png" id="7_eyhjp"]
[ext_resource type="Texture2D" uid="uid://ciy1ymckktomb" path="res://Sprites/WashGame/shaver_head1.png" id="8_cnocn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0nlrr"]
radius = 135.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_twggc"]
size = Vector2(49.66404, 31.659348)

[node name="HairGroom" type="Node2D"]
script = ExtResource("1_ove2h")

[node name="BackgroundShaveGame" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1081.6692
scale = Vector2(0.6015623, 0.5990741)
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_0nlrr")
expand_mode = 2

[node name="Head" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 347.0
offset_top = 27.0
offset_right = 810.0
offset_bottom = 490.0

[node name="Head" type="Sprite2D" parent="Head"]
position = Vector2(213.99994, 290.99994)
scale = Vector2(0.2554876, 0.2309982)
texture = ExtResource("2_0nlrr")

[node name="Chair" type="Sprite2D" parent="."]
position = Vector2(561, 632)
scale = Vector2(0.207, 0.206)
texture = ExtResource("3_ove2h")

[node name="Clock" type="Sprite2D" parent="."]
position = Vector2(573, 111.000015)
scale = Vector2(0.12, 0.12)
texture = ExtResource("4_cnocn")

[node name="ClockLabel" type="Label" parent="Clock"]
offset_left = -1000.00024
offset_top = -475.00015
offset_right = 950.00024
offset_bottom = 49.999847
theme_override_font_sizes/font_size = 400
text = "00:00:000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 480.0
offset_top = 585.0
offset_right = 680.0
offset_bottom = 655.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer"]
visible = false
layout_mode = 2
max_value = 2.0
show_percentage = false

[node name="ReferenceRect" type="ReferenceRect" parent="."]
offset_left = 388.0
offset_top = 180.0
offset_right = 745.0
offset_bottom = 528.0
border_color = Color(1, 0, 0, 0)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-2, -38)

[node name="ReferenceHeadCollision" type="CollisionShape2D" parent="Area2D"]
position = Vector2(563, 316)
shape = SubResource("CircleShape2D_0nlrr")

[node name="HairSpawner" type="Node" parent="."]
script = ExtResource("1_hivxq")
hair_prefab = ExtResource("4_3xqlg")
CHANCE = 10

[node name="ThinkTimer" type="Timer" parent="HairSpawner"]
wait_time = 100.0

[node name="CorrectTimer" type="Timer" parent="HairSpawner"]
wait_time = 0.2

[node name="WrongTimer" type="Timer" parent="HairSpawner"]
wait_time = 0.2

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
energy = 0.1

[node name="Shaver" type="CharacterBody2D" parent="." groups=["Shaver"]]
z_index = 1
position = Vector2(1, 1)
script = ExtResource("3_i71ie")

[node name="Shaver2" type="Sprite2D" parent="Shaver"]
visibility_layer = 2
position = Vector2(428, 216.00002)
rotation = -0.64751714
scale = Vector2(0.4, 0.431)
texture = ExtResource("7_eyhjp")

[node name="Shaver3" type="Sprite2D" parent="Shaver"]
visibility_layer = 2
position = Vector2(428, 216.00002)
rotation = -0.64751714
scale = Vector2(0.4, 0.431)
texture = ExtResource("8_cnocn")

[node name="ColorRect" type="ColorRect" parent="Shaver"]
visible = false
offset_top = 1.0
offset_right = 366.0
offset_bottom = 181.0
color = Color(0.992157, 0.992157, 0.227451, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shaver"]
position = Vector2(355.63208, 188.14241)
rotation = -0.65100783
shape = SubResource("RectangleShape2D_twggc")

[connection signal="level_ended" from="." to="." method="_end_print"]
[connection signal="timeout" from="HairSpawner/ThinkTimer" to="HairSpawner" method="_on_timer_timeout"]
[connection signal="timeout" from="HairSpawner/CorrectTimer" to="HairSpawner" method="_on_correct_timer_timeout"]
[connection signal="timeout" from="HairSpawner/WrongTimer" to="HairSpawner" method="_on_wrong_timer_timeout"]
